--- a/pages/contact/contact.css
+++ b/pages/contact/contact.css
@@ -85,7 +85,6 @@ form {
 .faqs-container {
     position: absolute;
     width: 80%;
-    height: calc(100vh + 127.9px);
     left: 50%;
     z-index: 8000;
     transform: translate(-50%);
@@ -112,10 +111,6 @@ form {
     height: 100vh;
     z-index: -1;
     background-color: transparent;
-}
-
-.scroll.up {
-    top: 0 !important;
 }
 
 .scroll.focus {
@@ -222,7 +217,7 @@ body.no-scroll {
     background-color: #EFF3F9;
     border: none;
     outline: none;
-    padding: 1.5rem 1.75rem calc(0.75rem - 2px) 1.75rem;
+    padding: 1.5rem calc(1.75rem + 20px) calc(0.75rem - 2px) 1.75rem;
     font-size: 0.95rem;
     border-radius: 10px;
     transition: 0.5s;
@@ -252,7 +247,7 @@ body.no-scroll {
     background-color: #EFF3F9;
     border: none;
     outline: none;
-    padding: 1.5rem 1.35rem calc(0.75rem - 2px) 1.35rem;
+    padding: 1.5rem calc(1.35rem + 16px) calc(0.75rem - 2px) 1.35rem;
     font-size: 0.95rem;
     border-radius: 10px;
     resize: none;
@@ -359,17 +354,32 @@ body.no-scroll {
     color: white;
 }
 
-@media (max-width: 768px) {
-    body {
-        grid-template-columns: 1fr;
-    }
+/* Responsive design */
 
-    form, .info {
-        width: 100%;
+@media (max-width: 1200px) {
+    form {
+        margin: 0px;
     }
 
     main {
         padding: 0 5%;
+        justify-content: space-between;
+    }    
+
+    form, .info {
+        width: 50%;
+    }
+}
+
+@media (max-width: 1024px) {
+    form, .info {
+        width: 100%;
+    }
+}
+
+@media (max-width: 768px) {
+    body {
+        grid-template-columns: 1fr;
     }
 
     .captcha {
@@ -377,20 +387,22 @@ body.no-scroll {
     }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 500px) {
     .contact .input-wrap {
         grid-column: span 2;
     }
+
     .form, .contact {
         padding: 0;
     }
 
     .captcha {
         display: grid;
+        grid-template-columns: 1fr;
     }
 
     .preview {
-        width: 140%;
+        min-width: 95%;
         margin-bottom: 0.5rem;
     }
 
